--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -26,6 +26,19 @@ services:
     volumes:
       - statics:/statics:rw
 
+  celery_worker:
+    env_file:
+      - ./config/django.dev.env
+      - ./config/postgres.dev.env
+    command: celery -A kucoin_updater.tasks worker --loglevel=info  
+
+  
+  celery_beat:
+    env_file:
+      - ./config/django.dev.env
+      - ./config/postgres.dev.env
+    command: celery -A kucoin_updater.beat beat --loglevel=info
+
 volumes:
   db-data-test:
   statics:
