--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,10 @@ target/
 profile_default/
 ipython_config.py
 
+/static
+/media
+/Encryptor/SecurityAuthenticator.py
+/Encryptor/sym.py
 # pyenv
 .python-version
 
@@ -102,12 +106,9 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
-env/
 venv/
 ENV/
-env.bak/
 venv.bak/
 
 # Spyder project settings
@@ -127,3 +128,13 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+#celery beat
+celerybeat-schedule.dir
+celerybeat-schedule.dat
+celerybeat-schedule.bak
+
+/db
+supervisor/supervisord.pid
+supervisor/*
