--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,28 @@
 asgiref==3.5.2
 astroid==2.12.10
 autopep8==1.7.0
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+cryptography==38.0.1
 dill==0.3.5.1
 Django==4.1.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.1
+idna==3.4
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
 platformdirs==2.5.2
 pycodestyle==2.9.1
+pycparser==2.21
 PyJWT==2.5.0
 pylint==2.15.3
 pytz==2022.4
+requests==2.28.1
 sqlparse==0.4.3
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.5
+urllib3==1.26.12
 wrapt==1.14.1
