--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,50 @@
+amqp==5.1.1
 asgiref==3.5.2
 astroid==2.12.10
+async-timeout==4.0.2
 autopep8==1.7.0
+billiard==3.6.4.0
+celery==5.2.7
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 cryptography==38.0.1
+Deprecated==1.2.13
 dill==0.3.5.1
-Django==4.1.2
+Django==4.0.8
+django-celery-beat==2.3.0
+django-timezone-field==5.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.1
 idna==3.4
 isort==5.10.1
+kombu==5.2.4
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
+packaging==21.3
 platformdirs==2.5.2
+prompt-toolkit==3.0.31
 pycodestyle==2.9.1
 pycparser==2.21
 PyJWT==2.5.0
 pylint==2.15.3
+pyparsing==3.0.9
+python-crontab==2.6.0
+python-dateutil==2.8.2
 pytz==2022.4
+redis==4.3.4
 requests==2.28.1
+six==1.16.0
 sqlparse==0.4.3
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.5
+tzdata==2022.4
 urllib3==1.26.12
+vine==5.0.0
+wcwidth==0.2.5
 wrapt==1.14.1
