--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.6
 wrapt==1.14.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+PyJWT==2.6.0
+pytz==2022.7.1
