--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,25 @@
 amqp==5.1.1
 asgiref==3.6.0
-astroid==2.13.3
+astroid==2.14.2
 async-timeout==4.0.2
 autopep8==2.0.1
 celery==5.2.7
 certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.0.1
-click==8.1.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
-cryptography==39.0.0
-Deprecated==1.2.13
-dill==0.3.6
-Django==4.1.5
+cryptography==39.0.1
+Django==4.1.7
 django-celery-beat==2.4.0
 django-timezone-field==5.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
-idna==3.4
-isort==5.11.4
-kombu==5.2.4
-lazy-object-proxy==1.9.0
-mccabe==0.7.0
-packaging==23.0
-platformdirs==2.6.2
-prompt-toolkit==3.0.36
-pycodestyle==2.10.0
-pycparser==2.21
 PyJWT==2.6.0
-pylint==2.15.10
-pyparsing==3.0.9
-python-crontab==2.7.1
 python-dateutil==2.8.2
 pytz==2022.7.1
-redis==4.4.2
+redis==4.5.1
 requests==2.28.2
 six==1.16.0
 sqlparse==0.4.3
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.11.6
 tzdata==2022.7
 urllib3==1.26.14
 vine==5.0.0
-wcwidth==0.2.6
-wrapt==1.14.1
+binance~=0.3
+django-jsonfield~=1.4.1
